add basic search manga and chapter

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,12 +9,22 @@ environment:
 # Add regular dependencies here.
 dependencies:
   dart_eval: ^0.8.2
+  html: ^0.15.5
+  flutter_cache_manager: ^3.3.1
+  intl: ^0.19.0
+  change_case: ^2.2.0
 
   manga_dex_api:
     git:
       url: https://github.com/robzimpulse/mangastash
       ref: master
       path: module/library/manga_dex_api
+
+  entity_manga:
+    git:
+      url: https://github.com/robzimpulse/mangastash
+      ref: master
+      path: module/entity/entity_manga
 
 dev_dependencies:
   lints: ^5.0.0
