--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_cache_manager: ^3.3.1
   intl: ^0.19.0
   change_case: ^2.2.0
+  collection: ^1.16.0
 
   manga_dex_api:
     git:
