--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   intl: ^0.19.0
   change_case: ^2.2.0
   collection: ^1.16.0
+  flutter_inappwebview: ^6.1.0
 
   manga_dex_api:
     git:
