--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,32 +15,18 @@ dependencies:
   change_case: ^2.2.0
   collection: ^1.16.0
   flutter_inappwebview: ^6.1.0
+  eval_annotation: ^0.8.1
 
   manga_dex_api:
     git:
       url: https://github.com/robzimpulse/mangastash
-      ref: master
+      ref: dependency_adjustment
       path: module/library/manga_dex_api
   entity_manga:
     git:
       url: https://github.com/robzimpulse/mangastash
-      ref: master
+      ref: dependency_adjustment
       path: module/entity/entity_manga
-  log_box:
-    git:
-      url: https://github.com/robzimpulse/log_box.git
-      ref: master
-      path: packages/log_box
-  log_box_dio_logger:
-    git:
-      url: https://github.com/robzimpulse/log_box.git
-      ref: master
-      path: packages/log_box_dio_logger
-  log_box_in_app_webview_logger:
-    git:
-      url: https://github.com/robzimpulse/log_box.git
-      ref: master
-      path: packages/log_box_in_app_webview_logger
 
 dev_dependencies:
   lints: ^5.0.0
